# mcp-enterprise-portfolio

./: .dockerignore  .env.example  .gitignore  .tool-versions  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  profile.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: nginx.conf
deploy/k8s/: deployment.yaml
docs/: architecture.md  architecture.mmd  deployment.md  disaster-recovery.md  evaluation.md  executive-summary.md  multi-agent-dialogue.md  presentation.md  risk-assessment.md  roi.md  security.md
migrations/: 001_init.sql
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: mcp-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: smoke_test.py
src/retail_mcp/: __init__.py  __main__.py  api.py  audit.py  bootstrap.py  cache.py  circuit_breaker.py  config.py  database.py  domain.py  errors.py  metrics.py  repository.py  security.py  server.py  services.py
tests/: conftest.py  test_api.py  test_bootstrap.py  test_config.py  test_resilience.py  test_resources.py  test_security.py  test_tools.py
