[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "retail-enterprise-mcp"
version = "1.0.0"
description = "Production-oriented MCP integration portfolio for enterprise retail"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30,<1",
  "mcp[cli]>=1.27,<2",
  "prometheus-client>=0.21,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "starlette>=1.3.1,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.scripts]
retail-mcp = "retail_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_mcp"]

[tool.pytest.ini_options]
addopts = "-q --cov=retail_mcp --cov-report=term-missing --cov-fail-under=75"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]
